--- a/talend-esb/pom.xml
+++ b/talend-esb/pom.xml
@@ -863,6 +863,13 @@
                                     <type>jar</type>
                                     <outputDirectory>target/dependencies</outputDirectory>
                                 </artifactItem>
+								<artifactItem>
+                                    <groupId>org.apache.camel</groupId>
+                                    <artifactId>camel-mqtt</artifactId>
+                                    <version>${camel-mqtt.tesb.version}</version>
+                                    <type>jar</type>
+                                    <outputDirectory>target/dependencies</outputDirectory>
+                                </artifactItem>
                             </artifactItems>
                         </configuration>
                     </execution>
